SERVER-81858 Don't batch TTL deletes on collection's with pre-images enabled