src/mongo/db/ttl.cpp
@@ -137,6 +137,11 @@ namespace mongo {
 namespace {
 const auto getTTLMonitor = ServiceContext::declareDecoration<std::unique_ptr<TTLMonitor>>();
 
+// TODO (SERVER-64506): support change streams' pre- and post-images.
+bool isBatchingEnabled(const CollectionPtr& collectionPtr) {
+    return ttlMonitorBatchDeletes.load() && !collectionPtr->isChangeStreamPreAndPostImagesEnabled();
+}
+
 // When batching is enabled, returns BatchedDeleteStageParams that limit the amount of work done in
 // a delete such that it is possible not all expired documents will be removed. Returns nullptr
 // otherwise.
@@ -763,7 +768,7 @@ bool TTLMonitor::_deleteExpiredWithIndex(OperationContext* opCtx,
     // Maintain a consistent view of whether batching is enabled - batching depends on
     // parameters that can be set at runtime, and it is illegal to try to get
     // BatchedDeleteStageStats from a non-batched delete.
-    const bool batchingEnabled = ttlMonitorBatchDeletes.load();
+    const bool batchingEnabled = isBatchingEnabled(collection.getCollectionPtr());
 
     Timer timer;
     auto exec = InternalPlanner::deleteWithIndexScan(opCtx,
@@ -836,7 +841,7 @@ bool TTLMonitor::_deleteExpiredWithCollscan(OperationContext* opCtx,
     // Maintain a consistent view of whether batching is enabled - batching depends on
     // parameters that can be set at runtime, and it is illegal to try to get
     // BatchedDeleteStageStats from a non-batched delete.
-    const bool batchingEnabled = ttlMonitorBatchDeletes.load();
+    const bool batchingEnabled = isBatchingEnabled(collection.getCollectionPtr());
 
     // Deletes records using a bounded collection scan from the beginning of time to the
     // expiration time (inclusive).
